# buildtime-secrets-nix

./: Cargo.toml  README.md  fetch-s3.nix  flake.nix  package.nix
.github/workflows/: ci.yaml
buildtime-secrets-nix/: Cargo.toml
buildtime-secrets-nix/src/: config.rs  error.rs  lib.rs  main.rs  secret.rs
buildtime-secrets-nix/src/backend/: executable.rs  mod.rs  sops.rs
libnixstore/: Cargo.toml  build.rs  setup-tests.sh
libnixstore/include/: nix-wrap.hh
libnixstore/src/: error.rs  lib.rs  nix-wrap.cc
modules/: buildtime-secrets.nix  sops.nix
